ds-167: fix color swatch alignment

--- a/docs-site/src/pages/pattern-lab/_patterns/10-visual-styles/00-color/_color-swatch.scss
+++ b/docs-site/src/pages/pattern-lab/_patterns/10-visual-styles/00-color/_color-swatch.scss
@@ -2,8 +2,6 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  justify-content: center;
-  height: 100%; // So vertical centering works -- same update we had to make for cards since teaking how flex grid behaves
 }
 
 .c-bolt-swatch__color {
